<resources>
    <string name="app_name">PS Exploit Server</string>
    <string name="made_by">Trident</string>
    <string name="error">ERROR</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_finish">Exit</string>


    <string name="ps4_logo_pic">ps4 logo</string>
    <string name="ps4_item_pic">ps4 item</string>
    <string name="antenna_pic">antenna</string>
    <string name="textLogout">Text Logout</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About application</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="exploit_folder_header">Default Exploit Archive Folder</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- default folder Preferences -->
    <string name="save_DefaultArchiveFolder_title">Save default folder</string>
    <string name="set_ExternalSDCARDFolder_title"> Set external SDCARD folder</string>
    <string name="enable_SaveDefaultArchive_key">enableSaveDefaultArchive</string>
    <string name="enable_ExternalSDCardDefaultArchive_key">enableExternalSDCardDefaultArchive</string>
    <string name="defaultIPPayload_key">defaultIPPayload</string>
    <string name="defaultPortPayload_key">defaultPortPayload</string>


    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Theme resource string -->
    <string name="welcome">Theme Example</string>

    <string-array name="themes">
        <item>Light Theme</item>
        <item>Dark Theme</item>
    </string-array>

    <string name="OK">OK</string>
    <string name="def_theme">Default Theme</string>
    <string name="theme_summary">Appearance</string>
    <string name="theme_dialog_title">Theme</string>
    <string name="settings">Settings</string>

    <!-- Misc resource string -->
    <string name="app_name_text">Exploit Server v 0.9</string>
    <string name="server_switch">Start Server</string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="xploit_folder">/xPloitServer</string>
    <string name="xploit_server">xPloit Server</string>

    <string name="payload_folder">/xPloitServer/bin</string>


    <string name="card_text">Exploit Item</string>
    <string name="card_pic">PS4 Logo</string>
    <string name="item_text">ABCD</string>
    <string name="image_description">pix</string>
    <string name="url_text">http://127.0.0.1:8080/</string>
    <string name="connect_ps4_text">Connect to :</string>

    <string name="Misc_Text">Set Text</string>

    <string name="delete_file_text">Delete</string>
    <string name="delete_all_file_text">Delete All</string>

    <string name="Log_text">View/Hide Log</string>
    <string name="clear_log_text">Clear Log</string>
    <string name="toggle_wifi_text">Toggle Wifi</string>
    <string name="spinner_title">Select network for exploit</string>

    <string name="tethering_settings">"Do you want access to android tethering settings ?
        When you have started the tethering, click bottom back button to return app.
    </string>

    <string name="avoid_tethering_message">
    "Swipe the quick settings and select icon tethering to activate.

    You can avoid this message :
     - Go to settings app
     - Appearance section
     - select 'avoid tethering message'."
    </string>



</resources>
