<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="Network Connection"
        app:summary="Manage Wifi and HotSpot" >

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableAutoWifi"
            android:title="Start Wifi with App" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="enableAutoHotSpot"
            android:title="Start HotSpot with App" />
        <EditTextPreference
            android:defaultValue="192.168.1.7"
            android:key="@string/defaultIPPayload_key"
            android:title="Set default client IP Payload" />
        <EditTextPreference
            android:defaultValue="9020"
            android:key="@string/defaultPortPayload_key"
            android:title="Set default client Port Payload" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/exploit_folder_header"
        app:summary="Default directory that contains the exploit archive">

        <SwitchPreferenceCompat
            app:title="@string/save_DefaultArchiveFolder_title"
            app:defaultValue="false"
            app:key="@string/enable_SaveDefaultArchive_key"
            app:useSimpleSummaryProvider="false" />

        <SwitchPreferenceCompat
            app:title="@string/set_ExternalSDCARDFolder_title"
            app:defaultValue="false"
            app:key="@string/enable_ExternalSDCardDefaultArchive_key"
            app:useSimpleSummaryProvider="true"
            app:summary="otherwise, internal storage" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/theme_summary"
        app:summary="Change the appearance of the app">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="useAppLog"
            android:title="Enable App Log" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="avoidTetheringMessage"
            android:title="avoid tethering message for network" />

        <ListPreference
            android:defaultValue="@string/def_theme"
            android:entries="@array/themes"
            android:entryValues="@array/themes"
            android:key="theme"
            android:title="@string/theme_dialog_title"
            android:summary="@string/theme_summary"
            android:dialogTitle="@string/theme_dialog_title"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>


    <!--
    <ListPreference
        android:defaultValue="@string/def_theme"
        android:dialogTitle="@string/theme_dialog_title"
        android:entries="@array/themes"
        android:key="theme"
        android:showDividers="middle"
        android:summary="@string/theme_summary"
        android:title="@string/theme_dialog_title" />
    -->

    <!--<View style="@style/Divider.horizontal" /> -->

    <!--
    app:key="@string/enable_SaveDefaultArchive_key"
    app:key="@string/enable_ExternalSDCardDefaultArchive_key"

    app:summaryOff="@string/attachment_summary_off"
    app:summaryOn="@string/attachment_summary_on" />
    -->
