<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/grp1" >

        <item
            android:id="@+id/toggleLog"
            android:icon="@drawable/ic_log_icon"
            android:checkable="true"
            android:orderInCategory="100"
            android:title="@string/Log_text"
            android:visible="true"
            app:showAsAction="withText" />

        <item
            android:id="@+id/clearLog"
            android:icon="@drawable/blank_file_icon"
            android:orderInCategory="100"
            android:title="@string/clear_log_text"
            android:visible="true"
            app:showAsAction="withText" />
    </group>

    <group
        android:id="@+id/grp2" >

        <item
            android:id="@+id/toggleWifi"
            android:icon="@drawable/ic_wifi_blue_24dp"
            android:checkable="true"
            android:orderInCategory="200"
            android:title="@string/toggle_wifi_text"
            android:visible="true"
            app:showAsAction="withText" />
    </group>

    <group
        android:id="@+id/grp3" >

        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:orderInCategory="300"
            android:title="@string/action_settings"
            android:visible="true"
            app:showAsAction="withText" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:orderInCategory="301"
            android:title="@string/action_about"
            android:visible="true"
            app:showAsAction="withText" />

        <item
            android:id="@+id/action_finish"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:orderInCategory="302"
            android:title="@string/action_finish"
            android:visible="true"
            app:showAsAction="collapseActionView" />
    </group>

</menu>