<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id = "@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:gravity="center"
            android:contentDescription="@string/action_about"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/aboutVersionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:gravity="center"
            android:text="@string/app_version" />

        <TextView
            android:id="@+id/madeBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aboutVersionTextView"
            android:gravity="center"
            android:text="@string/made_by"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/madeBy"
            android:labelFor = "@+id/relativeLayout"
            android:gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:autofillHints="" />

</RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>