<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp">

        <!--
        <TextView
            android:id="@+id/selectNetworkSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/app_name_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:fontFamily="@font/alegreya_sc" />
        -->

        <Spinner
            android:id="@+id/selectNetworkSpinner"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/spinner_selector"
            android:prompt="@string/spinner_title"
            android:spinnerMode="dropdown"
            android:text="@string/app_name_text"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/serverStartSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selectNetworkSpinner"
            android:layout_alignStart="@id/selectNetworkSpinner"
            android:layout_alignEnd="@id/selectNetworkSpinner"
            android:layout_marginTop="10dp"
            android:text="@string/server_switch"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serverStartSW"
            android:layout_alignStart="@id/serverStartSW"
            android:layout_marginTop="6dp"
            android:text="@string/connect_ps4_text"
            android:textColor="#33b5e5"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/serverStartSW"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/textConnect"
            android:text="@string/url_text"
            android:textColor="#33b5e5"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/AntennaIcon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/selectNetworkSpinner"
            android:contentDescription="@string/antenna_pic"
            app:srcCompat="@drawable/antenna" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/exploit_list"
            android:layout_width="wrap_content"
            android:layout_height="330dp"
            android:layout_below="@id/textUrl"
            android:layout_alignStart="@id/serverStartSW"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="62dp"
            android:background="@drawable/border_ui"
            android:longClickable="false" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exploit_list"
            android:layout_alignStart="@id/exploit_list"
            android:layout_alignEnd="@id/exploit_list"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/border_ui"
            android:fillViewport="true">

            <TextView
                android:id="@+id/textLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="95dp"

                android:textColor="#000000"
                android:textSize="14sp" />
        </ScrollView>

    </RelativeLayout>

    <!--
        <ImageView
            android:id="@+id/AntennaIcon"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_alignStart="@id/switch1"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="274dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="573dp"
            android:contentDescription="@string/antenna_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/switch1"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/antenna" />
        -->

    <!--
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exploit_list"
        android:layout_width="325dp"
        android:layout_height="295dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="240dp"
        android:clickable="true"
        android:focusable="true"
        android:scrollbars="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exploit_list"
        android:layout_width="362dp"
        android:layout_height="242dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    -->


</androidx.constraintlayout.widget.ConstraintLayout>